[project]
name = "alpaca-package"
version = "0.1.0"
description = "A package for working with Alpaca API"
authors = [
    {name = "JimCollins",email = "jim.collins+alpaca-package@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
